overflow fixed

--- a/src/pages/About/styles/about.module.css
+++ b/src/pages/About/styles/about.module.css
@@ -166,8 +166,7 @@
     .imageContainer{
       height: 22.5vh;
     }
-    aboutCircle{
-    }
+    
     .aboutHeading{
       font-size: 2.25rem;
     }
@@ -187,7 +186,7 @@
   
   @media screen and  (max-width: 1000px){
     .main{
-      width: 500px;
+     
       height: 500px;    }
     .imageContainer{
       height: 21vh;
